--- a/src/assets/css/init.css
+++ b/src/assets/css/init.css
@@ -46,10 +46,26 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-a{
-  text-decoration:none;
+/*包含以下四种的链接*/
+a {
+  text-decoration: none;
 }
-
+/*正常的未被访问过的链接*/
+a:link {
+  text-decoration: none;
+}
+/*已经访问过的链接*/
+a:visited {
+  text-decoration: none;
+}
+/*鼠标划过(停留)的链接*/
+a:hover {
+  text-decoration: none;
+}
+/* 正在点击的链接*/
+a:active {
+  text-decoration: none;
+}
 .clearfix:before,
 .clearfix:after{
   content:"";
